Fix text align.

--- a/styles.css
+++ b/styles.css
@@ -55,6 +55,7 @@ body {
 #score {
   font-size: 20px;
   font-weight: bold;
+  text-align: center;
 }
 
 .base-timer {
